Bug 1398539: Inhibit screensaver with XScreenSaverSuspend r=karlt

MozReview-Commit-ID: LhhpaDaPdaO